fix(README.md, build.gradle, CarTest.java, UserInterface.java)